# emacs-org-mcp

./: .drone.yml  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  emacs_ediff.el  manual_test_ediff.py  pyproject.toml  server.py
mcp_server/: __init__.py  config.py  journal.py  projects.py  resources.py  tasks.py  tools.py  utils.py
resources/guides/: examples.md  journal-format.md  project-format.md  task-format.md  tool-usage.md
scripts/: install_desktop.py
tests/: __init__.py  conftest.py  test_config.py  test_ediff.py  test_factories.py  test_journal.py  test_projects.py  test_resources.py  test_tasks.py
