[project]
name = "emacs-task-journal-mcp"
version = "0.1.1"
description = "MCP server for managing Emacs org-mode tasks and journal entries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docopt>=0.6.2",
    "mcp>=1.25.0",
    "orgmunge>=0.3.1",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.0",
]

[tool.black]
line-length = 80
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 80

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by black

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]
