[project]
name = "emacs-task-journal-mcp"
version = "0.1.1"
description = "MCP server for managing Emacs org-mode tasks and journal entries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docopt>=0.6.2",
    "mcp>=1.25.0",
    "orgmunge>=0.3.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "I",   # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]
